welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: identifier expected but integer literal found.
	t[0]=x ;
          ^Array1:6: error: ']' expected but ';' found.
	t[0]=x ;
               ^Array1:8: error: identifier expected but integer literal found.
	t[1]=x
          ^Array1:9: error: ']' expected but ';' found.
	avance();
^Array1:10: error: identifier expected but integer literal found.
	t[2]=x
          ^Array1:11: error: ']' expected but ';' found.
	avance();
^Array1:12: error: identifier expected but integer literal found.
	t[3]=x
          ^Array1:13: error: ']' expected but ';' found.
	avance();
^Array1:14: error: identifier expected but integer literal found.
	t[4]=x
          ^Array1:15: error: ']' expected but ';' found.
	avance();
^Array1:16: error: identifier expected but integer literal found.
	t[5]=x
          ^Array1:17: error: ']' expected but ';' found.
	for(i<-0 to 5) {avance(); gauche(); avance(); droite(); t[i]=t[i+1] }
^Array1:17: error: ';' expected but '=' found.
	for(i<-0 to 5) {avance(); gauche(); avance(); droite(); t[i]=t[i+1] }
                                                                    ^